# P2PRoom

./: .gitignore  CMakeLists.txt  project_structure.md
src/: main.cpp
test/: main_test.cpp
view/: HelloWorld.qml
